// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`left slot 1`] = `
<div class="nav-bar">
  <div class="nav-bar__content">
    <div class="nav-bar__left">
      <div>left</div>
    </div>
    <div class="nav-bar__title van-ellipsis"></div>
  </div>
</div>
`;

exports[`should render title slot and match snapshot 1`] = `
<div class="nav-bar">
  <div class="nav-bar__content">
    <div class="nav-bar__title van-ellipsis">Custom Title</div>
  </div>
</div>
`;
